--- a/.env.temp
+++ b/.env.temp
@@ -5,6 +5,7 @@ SHUTDOWN_TIMEOUT=2000
 STARTUP_DELAY=1000
 RETRY_COUNT=10
 
+# OpenID SETTINGS
 SSO_ISSUER=
 SSO_WELL_KNOWN=
 SSO_JWKS_URI=
@@ -15,7 +16,7 @@ SSO_CLIENT_ID=
 SSO_CLIENT_SECRET=
 SSO_REDIRECT_URI=
 
-# MS SQL DB settings
+# DB SETTINGS
 SA_PASSWORD=
 DB_USER=
 DB_PASS=
@@ -23,6 +24,6 @@ DB_SCHEMA=
 DB_HOST=
 DB_PORT=
 
-# SSO settings
+# SSO SETTINGS
 KEYCLOAK_USER=
 KEYCLOAK_PASSWORD=
