--- a/docs/api/responses.yaml
+++ b/docs/api/responses.yaml
@@ -49,7 +49,7 @@ UserResponse:
               id: ed3b3493-697f-4915-9906-fc29f8d33521
               firstName: Jane
               lastName: Doe
-              email: Jane.Doe@system4u.com
+              email: Jane.Doe@company.com
               active: true
               role: User
               createdAt: '2019-06-04T10:17:08.706Z'
@@ -66,7 +66,7 @@ UserListResponse:
           - id: ed3b3493-697f-4915-9906-fc29f8d33521
             firstName: Jane
             lastName: Doe
-            email: Jane.Doe@system4u.com
+            email: Jane.Doe@company.com
             active: true
             role: User
             createdAt: '2019-06-04T10:17:08.706Z'
@@ -74,7 +74,7 @@ UserListResponse:
           - id: 3d5fff4d-1724-4220-aa8e-c5c19abff139
             firstName: Deve
             lastName: Adminowitch
-            email: adminowitch@system4u.com
+            email: adminowitch@company.com
             active: true
             role: Admin
             createdAt: '2019-06-04T10:17:08.706Z'
@@ -91,7 +91,7 @@ UserInfoResponse:
               id: 1
               firstName: Jane
               lastName: Doe
-              email: Jane.Doe@system4u.com
+              email: Jane.Doe@company.com
               active: true
               role: User
               createdAt: '2019-06-04T10:17:08.706Z'
