added defaults in to .env

--- a/.env.temp
+++ b/.env.temp
@@ -6,15 +6,15 @@ STARTUP_DELAY=1000
 RETRY_COUNT=10
 
 # OpenID SETTINGS
-SSO_ISSUER=
-SSO_WELL_KNOWN=
-SSO_JWKS_URI=
-SSO_TOKEN_ENDPOINT=
-SSO_END_SESSION_ENDPOINT=
+SSO_ISSUER=http://localhost:8101/auth/realms/demo
+SSO_WELL_KNOWN=http://localhost:8101/auth/realms/demo/.well-known/openid-configuration
+SSO_JWKS_URI=http://localhost:8101/auth/realms/demo/protocol/openid-connect/certs
+SSO_TOKEN_ENDPOINT=http://localhost:8101/auth/realms/demo/protocol/openid-connect/token
+SSO_END_SESSION_ENDPOINT=http://localhost:8101/auth/realms/demo/protocol/openid-connect/logout
 SSO_HASH_ALG=RS256
-SSO_CLIENT_ID=
-SSO_CLIENT_SECRET=
-SSO_REDIRECT_URI=
+SSO_CLIENT_ID=server
+SSO_CLIENT_SECRET=155bca8c-5c95-4f40-a084-8f0025b0456b
+SSO_REDIRECT_URI=http://localhost:8080/callback
 
 # DB SETTINGS
 SA_PASSWORD=
@@ -24,6 +24,6 @@ DB_SCHEMA=
 DB_HOST=
 DB_PORT=
 
-# SSO SETTINGS
-KEYCLOAK_USER=
-KEYCLOAK_PASSWORD=
+# KEYCLOAK SETTINGS
+KEYCLOAK_USER=admin
+KEYCLOAK_PASSWORD=Admin-123
