--- a/docs/api/index.yaml
+++ b/docs/api/index.yaml
@@ -10,7 +10,7 @@ servers:
 
 info:
   version: 1.0.0
-  title:  Demo API server
+  title: Demo API server
   description: |
     API Interface to Demo.
   contact:
@@ -49,7 +49,7 @@ components:
       schema:
         type: string
         format: uuid
-        example: '11111111-1111-1111-1111-111111111111'
+        example: "11111111-1111-1111-1111-111111111111"
       required: true
       description: Resource ID in UUID format
 
@@ -128,23 +128,23 @@ components:
       properties:
         id:
           allOf:
-            - $ref: '#/components/schemas/UUID'
-            - description: 'Unique identification of the portal user.'
+            - $ref: "#/components/schemas/UUID"
+            - description: "Unique identification of the portal user."
         firstName:
           type: string
         lastName:
           type: string
         email:
-          $ref: '#/components/schemas/EMAIL'
+          $ref: "#/components/schemas/EMAIL"
         active:
           type: boolean
         role:
           type: string
           enum: [User, Admin]
         createdAt:
-          $ref: '#/components/schemas/DATE'
+          $ref: "#/components/schemas/DATE"
         updatedAt:
-          $ref: '#/components/schemas/DATE'
+          $ref: "#/components/schemas/DATE"
 
   responses:
     $ref: ./responses.yaml
