--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/express-winston": "^4.0.0",
+    "@types/fs-extra": "^9.0.7",
     "@types/jest": "^26.0.14",
     "@types/node": "^12.12.14",
     "@types/ramda": "^0.26.36",
@@ -73,6 +74,7 @@
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "express-winston": "^4.0.1",
+    "fs-extra": "^9.1.0",
     "jwks-rsa": "^1.6.0",
     "logform": "^2.2.0",
     "mkdirp": "^0.5.1",
