refactoring - application logger - env cfg

--- a/.env.temp
+++ b/.env.temp
@@ -34,6 +34,7 @@ LOG_DIR=
 LOG_FILE_LEVEL=
 LOG_FILE_NAME_INFO=
 LOG_FILE_NAME_ERROR=
+LOG_FILE_NAME_EXCEPTIONS=
 LOG_FILE_DATE_PATTERN=
 LOG_FILE_ZIP_ARCH=
 LOG_FILE_MAX_SIZE=
