--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "ts-mockito": "^2.6.1",
     "tsmonad": "^0.8.0",
     "validator": "^12.1.0",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.0"
   }
 }
