Added winston splunk transport layer into logger

--- a/.env.temp
+++ b/.env.temp
@@ -39,5 +39,18 @@ LOG_FILE_DATE_PATTERN=
 LOG_FILE_ZIP_ARCH=
 LOG_FILE_MAX_SIZE=
 LOG_FILE_MAX_FILES=
-LOG_CONSOLE_LEVEL=
+
 LOG_CONSOLE_ENABLE=
+LOG_CONSOLE_LEVEL=
+
+LOG_SPLUNK_ENABLE=0
+LOG_SPLUNK_LEVEL=info
+LOG_SPLUNK_PROTOCOL=
+LOG_SPLUNK_HOST=
+LOG_SPLUNK_PORT=
+LOG_SPLUNK_PATH=
+LOG_SPLUNK_INDEX=
+LOG_SPLUNK_SOURCE=
+LOG_SPLUNK_SOURCE_TYPE=
+LOG_SPLUNK_TOKEN=ca5f5c49-1253-4be2-a904-d515143400dd
+
