--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "tsmonad": "^0.8.0",
     "validator": "^12.1.0",
     "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.0"
+    "winston-daily-rotate-file": "^4.5.0",
+    "winston-splunk-httplogger": "^2.3.3"
   }
 }
