--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "types": [
+      "node",
+      "jest"
+    ],
     "module": "commonjs",
     "target": "es6",
     "lib": [ "es6", "dom" ],
